[gd_scene load_steps=3 format=3 uid="uid://byl468qghtf68"]

[ext_resource type="Script" uid="uid://u7qtfciqryyc" path="res://Scenes/UI/inventory_slot.gd" id="1_brh76"]
[ext_resource type="Texture2D" uid="uid://duprnfdb7k65g" path="res://Assets/Sprites/Bottles/basebottle.png" id="2_nxjtc"]

[node name="InventorySlot" type="AspectRatioContainer"]
custom_minimum_size = Vector2(64, 64)
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_brh76")

[node name="SlotFrame" type="Control" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="Background" type="ColorRect" parent="SlotFrame"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.8)

[node name="SelectionBorder" type="ColorRect" parent="SlotFrame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 0, 0)

[node name="SauceIcon" type="TextureRect" parent="SlotFrame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_nxjtc")
expand_mode = 3

[node name="LevelLabel" type="Label" parent="SlotFrame"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 10
